--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -3,6 +3,12 @@
   margin: 0;
 }
 
+a, a:visited {
+    color:#000;
+    font-weight:bold;
+    text-decoration:none;
+}
+
 body {
   font-family: 'Source Sans Pro', sans-serif;
   -webkit-font-feature-settings: "kern", "liga", "pnum";
@@ -46,13 +52,17 @@ header {
 }
 
 .release-column {
-    width:1024px;
+    width:800px;
     margin: 50px auto;
     .release {
         width:100%;
         h1 {
             font-size:50px;
             margin:20px 0;
+            color:#FF9933;
+            &.hypable {
+                color: #000;
+            }
         }
         img {
             max-width:100%;
@@ -61,6 +71,9 @@ header {
             width:64px;
             margin:64px auto;
             border-top:1px solid grey;
+        }
+        .hype {
+            cursor:pointer;
         }
     }
 }
