--- a/resources/views/js.njk
+++ b/resources/views/js.njk
@@ -1,2 +1,5 @@
+<!-- I'd prefer to use npm and webpack for frontend dependencies, but setting that up would take time away from the cool stuff -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.3/vue.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vue-resource/1.3.3/vue-resource.js"></script>
+<script src="https://unpkg.com/adonis-websocket-client@1.0.2/dist/ws.min.js"></script>
 <script src="/hypegame.js"></script>
