--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -78,6 +78,21 @@ header {
     }
 }
 
+.analytics {
+    width:600px;
+    margin:50px auto;
+    h1 {
+        text-align:center;
+    }
+    .analytics-list {
+        list-style:none;
+        margin: 64px 0;
+        li {
+            margin:24px 0;
+        }
+    }
+}
+
 .copyright {
     margin:50px 0 20px 0;
     text-align:center;
