--- a/resources/views/frontend-js.njk
+++ b/resources/views/frontend-js.njk
@@ -2,4 +2,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.3/vue.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-resource/1.3.3/vue-resource.js"></script>
 <script src="https://unpkg.com/adonis-websocket-client@1.0.2/dist/ws.min.js"></script>
-<script src="/hypegame.js"></script>
+<script src="/frontend.js"></script>
