Fixed the error page and added a simple icon

--- a/resources/views/errors/index.njk
+++ b/resources/views/errors/index.njk
@@ -1,10 +1,32 @@
-{% extends 'master' %}
+<!doctype html>
 
-{% block content %}
-  <div class="__banner">
-    <div class="banner__inner">
-      <h1>{{ error.status }}</h1>
-      <p> Something bad happened! <a href="/">Go Back</a> </p>
-    </div>
-  </div>
-{% endblock %}
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Hype Game</title>
+        <meta name="description" content="List of all the most hyped releases in the urban style world">
+        <meta name="author" content="John Sparwasser">
+        <link rel="stylesheet" type="text/css" href="/style.css">
+    </head>
+
+    <body>
+
+        <header>
+            <p><a href="/">HYPEGAME</a></p>
+        </header>
+
+        <div class="__banner">
+            <div class="banner__inner">
+                <h1>{{ error.status }}</h1>
+                <p> Something bad happened! <a href="/">Go Back</a> </p>
+            </div>
+        </div>
+
+
+        <div class="copyright">
+            <p>Copyright <a href="http://johnsparwasser.com">John Sparwasser</a> <script>document.write(new Date().getFullYear())</script></p>
+        </div>
+
+    </body>
+</html>
+
